# gxfacebook

./: README.md  commands.txt  pyproject.toml
gxfacebook/: __main__.py
static/: index.html
