[tool.poetry]
name = "gxfacebook"
version = "0.1.0"
description = ""
authors = ["telugu-boy <h0l33fuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
sanic = "^25.3.0"
yt-dlp = "^2025.5.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
